--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -140,6 +140,25 @@
                 app:layout_constraintBottom_toBottomOf="@+id/book_author_tv"
                 app:layout_constraintStart_toEndOf="@+id/book_author_tv"/>
 
+            <ImageView
+                android:id="@+id/ic_pencle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_pencil"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
+                app:layout_constraintEnd_toStartOf="@id/ic_mark"
+                android:layout_marginEnd="5dp"/>
+            <ImageView
+                android:id="@+id/ic_mark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_mark"
+                app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
+                android:layout_marginTop="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="10dp"/>
+
             <!-- 책 정보 -->
             <TextView
                 android:id="@+id/book_info_title"
@@ -151,7 +170,9 @@
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/book_bg_iv"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="30dp"
+                />
 
             <!-- 태그 리스트 -->
             <com.google.android.flexbox.FlexboxLayout
