--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -73,6 +73,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/locationRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/add_location_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:overScrollMode="never" />
+
+
 
     <!-- 제목 입력 -->
     <TextView
@@ -82,7 +93,7 @@
         android:text="제목"
         android:textSize="14sp"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/add_location_button"
+        app:layout_constraintTop_toBottomOf="@id/locationRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp" />
 
