--- a/app/src/main/res/layout/item__review_book.xml
+++ b/app/src/main/res/layout/item__review_book.xml
@@ -11,6 +11,7 @@
     android:background="#0F0F10">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_book"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="12dp"
@@ -84,7 +85,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/book_rating_text"
             app:layout_constraintStart_toEndOf="@id/book_rating_text"
             android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="@+id/book_rating_text" />
+            app:layout_constraintTop_toTopOf="@+id/book_rating_text"
+            app:layout_constraintEnd_toEndOf="@+id/item_book"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
