디자인 수정중

--- a/app/src/main/res/layout/item_letter.xml
+++ b/app/src/main/res/layout/item_letter.xml
@@ -121,6 +121,7 @@
         android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:layout_goneMarginTop="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,6 +183,7 @@
         android:text="책 구절"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_goneMarginTop="50dp"
         app:layout_constraintEnd_toEndOf="@id/book_tags"
         app:layout_constraintEnd_toStartOf="@id/book_tags"
         app:layout_constraintHorizontal_bias="0.00"
@@ -190,9 +192,9 @@
 
     <TextView
         android:id="@+id/book_excerpt"
-        android:layout_width="wrap_content"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
         android:text="인생은 탐구하면서 살아가는 것이 아니라, 살아가면서 탐구하는 것이다. 실수는 되풀이된다. 그것이 인생이다..."
 
