--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -142,8 +142,8 @@
 
             <ImageView
                 android:id="@+id/ic_pencle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/ic_pencil"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
@@ -151,8 +151,8 @@
                 android:layout_marginEnd="5dp"/>
             <ImageView
                 android:id="@+id/ic_mark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_mark"
                 app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
                 android:layout_marginTop="12dp"
@@ -171,7 +171,7 @@
                 app:layout_constraintTop_toBottomOf="@id/book_bg_iv"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 />
 
             <!-- 태그 리스트 -->
@@ -251,7 +251,7 @@
                 android:id="@+id/user_rating_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="출판사 서평 들어갈 곳"
+                android:text=""
                 app:layout_constraintTop_toBottomOf="@id/book_excerpt"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="16dp"/>
