--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,13 +125,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- "나의 활동" 카드뷰 -->
-        <include
-            android:id="@+id/activity_card"
-            layout="@layout/activity_card"
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/activityViewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"/>
 
 
 
@@ -158,7 +158,7 @@
         <include
             layout="@layout/reminder_section"
             android:id="@+id/final_card"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"/>
