--- a/app/src/main/res/layout/reminder_section.xml
+++ b/app/src/main/res/layout/reminder_section.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@drawable/gradient_bg">
+    android:background="@drawable/gradient_bg_2">
 
     <!-- 제목 -->
     <TextView
@@ -34,34 +34,57 @@
     <!-- 첫 번째 카드 -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_1"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:cardBackgroundColor="#FFFFFF"
+        android:layout_width="170dp"
+        android:layout_height="210dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="0dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@id/reminder_subtitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/card_2"
-        app:layout_constraintWidth_percent="0.4"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp">
+        app:layout_constraintStart_toStartOf="@id/reminder_subtitle"
+        app:layout_constraintEnd_toEndOf="@id/reminder_subtitle"
+        android:layout_marginTop="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- 이미지 -->
             <ImageView
                 android:id="@+id/card_1_image"
-                android:layout_width="0dp"
-                android:layout_height="140dp"
-                android:src="@drawable/book_sample1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:background="@drawable/img_book_cover7"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
 
-            <!-- 날짜 레이블 -->
+                app:layout_constraintDimensionRatio="2:3"/>
+
+
+            <View
+                android:id="@+id/book_blur_overlay"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/blur_effect_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/card_1_title"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="소설 보다 가을"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:paddingStart="8dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toTopOf="@id/book_blur_overlay"
+                app:layout_constraintStart_toStartOf="parent" />
             <TextView
                 android:id="@+id/card_1_date"
                 android:layout_width="wrap_content"
@@ -73,120 +96,113 @@
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:gravity="center"
-                app:layout_constraintTop_toTopOf="@id/card_1_image"
-                app:layout_constraintEnd_toEndOf="@id/card_1_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="8dp" />
 
-            <!-- 제목 -->
-            <TextView
-                android:id="@+id/card_1_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="홍학의 자리"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                app:layout_constraintTop_toBottomOf="@id/card_1_image"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="4dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
-
-            <!-- 설명 -->
             <TextView
                 android:id="@+id/card_1_description"
-                android:layout_width="0dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="내가 원래 이렇게 편했던 사람이었나 하는 생각이 든다..."
-                android:textSize="12sp"
-                android:textColor="#666666"
-                app:layout_constraintTop_toBottomOf="@id/card_1_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="4dp"
+                android:text="한강 시집"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:maxLines="1"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+                android:paddingBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/card_1_title"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <!-- 두 번째 카드 -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_2"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/reminder_subtitle"
+        android:layout_width="170dp"
+        android:layout_height="210dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="0dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/card_1"
         app:layout_constraintStart_toEndOf="@id/card_1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp">
+        app:layout_constraintBottom_toBottomOf="@id/card_1"
+        android:layout_marginStart="30dp"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- 이미지 -->
             <ImageView
                 android:id="@+id/card_2_image"
-                android:layout_width="0dp"
-                android:layout_height="140dp"
-                android:src="@drawable/book_sample1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:background="@drawable/img_book_cover7"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
 
-            <!-- 날짜 레이블 -->
+                app:layout_constraintDimensionRatio="2:3"/>
             <TextView
                 android:id="@+id/card_2_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#BFFFFFFF"
                 android:padding="4dp"
-                android:text="DEC\n05"
+                android:text="DEC\n21"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:gravity="center"
-                app:layout_constraintTop_toTopOf="@id/card_2_image"
-                app:layout_constraintEnd_toEndOf="@id/card_2_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="8dp" />
 
-            <!-- 제목 -->
+
+            <View
+                android:id="@+id/book_blur_overlay2"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/blur_effect_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <TextView
                 android:id="@+id/card_2_title"
-                android:layout_width="0dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="소설 보다 가을"
-                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:textSize="13sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
-                app:layout_constraintTop_toBottomOf="@id/card_2_image"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="4dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toTopOf="@id/book_blur_overlay2"
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <!-- 설명 -->
             <TextView
                 android:id="@+id/card_2_description"
-                android:layout_width="0dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="내가 원래 이렇게 편했던 사람이었나 하는 생각이 든다..."
-                android:textSize="12sp"
-                android:textColor="#666666"
-                app:layout_constraintTop_toBottomOf="@id/card_2_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="4dp"
+                android:text="한강 시집"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:maxLines="1"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+                android:paddingBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/card_2_title"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
