--- a/app/src/main/res/layout/activity_letter.xml
+++ b/app/src/main/res/layout/activity_letter.xml
@@ -21,6 +21,7 @@
 
     <!-- NestedScrollView로 전체 콘텐츠를 감싸기 -->
     <androidx.core.widget.NestedScrollView
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/back_button"
@@ -59,6 +60,8 @@
                 android:id="@+id/book_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:clipToPadding="false"
                 android:paddingBottom="16dp"/>
         </LinearLayout>
