--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="12dp"
-    android:background="#0F0F10">
+    android:background="#0F0F10"
+
+    android:clickable="true"
+    android:focusable="true">
 
     <!-- 카테고리 제목 -->
 <TextView
