--- a/app/src/main/res/layout/item_letter.xml
+++ b/app/src/main/res/layout/item_letter.xml
@@ -34,6 +34,7 @@
         android:layout_width="110dp"
         android:layout_height="165dp"
         android:scaleType="fitXY"
+        android:elevation="10dp"
         android:src="@drawable/img_bookclub_detail"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="40dp"
@@ -67,21 +68,31 @@
         android:id="@+id/book_author_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="양귀자 장편소설"
+        android:text="양귀자 "
         android:textSize="14sp"
         android:textColor="@color/white"
         android:fontFamily="@font/pretendard_medium"
         app:layout_constraintTop_toBottomOf="@+id/book_title_tv"
         app:layout_constraintStart_toStartOf="@+id/book_title_tv"/>
 
+    <TextView
+        android:id="@+id/category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="장편소설"
+        app:layout_constraintStart_toEndOf="@id/book_author_tv"
+        app:layout_constraintTop_toTopOf="@id/book_author_tv"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/pretendard_medium"/>
     <ImageView
         android:id="@+id/vertical_gray_line"
         android:layout_width="0.8dp"
         android:layout_height="7dp"
         android:background="#80FFFFFF"
-        app:layout_constraintTop_toTopOf="@+id/book_author_tv"
-        app:layout_constraintBottom_toBottomOf="@+id/book_author_tv"
-        app:layout_constraintStart_toEndOf="@+id/book_author_tv"
+        app:layout_constraintTop_toTopOf="@+id/category"
+        app:layout_constraintBottom_toBottomOf="@+id/category"
+        app:layout_constraintStart_toEndOf="@+id/category"
         android:layout_marginStart="5dp"
         />
 
@@ -94,9 +105,9 @@
         android:textColor="@color/white"
         android:fontFamily="@font/pretendard_medium"
         android:layout_marginStart="12dp"
-        app:layout_constraintTop_toTopOf="@+id/book_author_tv"
-        app:layout_constraintBottom_toBottomOf="@+id/book_author_tv"
-        app:layout_constraintStart_toEndOf="@+id/book_author_tv"/>
+        app:layout_constraintTop_toTopOf="@+id/category"
+        app:layout_constraintBottom_toBottomOf="@+id/category"
+        app:layout_constraintStart_toEndOf="@+id/category"/>
 
     <ImageView
         android:id="@+id/book_info_next_btn"
@@ -178,7 +189,6 @@
         android:id="@+id/book_excerpt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:text="책 구절"
         android:textColor="@color/white"
@@ -192,16 +202,14 @@
 
     <TextView
         android:id="@+id/book_excerpt"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+
         android:layout_marginTop="8dp"
         android:text="인생은 탐구하면서 살아가는 것이 아니라, 살아가면서 탐구하는 것이다. 실수는 되풀이된다. 그것이 인생이다..."
 
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/book_excerpt_title"
-        app:layout_constraintHorizontal_bias="0.005"
         app:layout_constraintStart_toStartOf="@id/book_excerpt_title"
         app:layout_constraintTop_toBottomOf="@id/book_excerpt_title" />
 
@@ -218,14 +226,14 @@
         android:layout_marginTop="12dp"/>
 
     <!-- 자세히 보기 버튼 -->
-    <TextView
+    <ImageView
         android:id="@+id/detail_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="자세히 보기"
-        android:textSize="14sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+
+
+
+        android:src="@drawable/ic_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/book_db_info"
         android:layout_marginEnd="16dp"/>
