--- a/app/src/main/res/layout/item_editor_pick_book.xml
+++ b/app/src/main/res/layout/item_editor_pick_book.xml
@@ -16,6 +16,9 @@
         android:scaleType="centerCrop"
         android:src="@drawable/img_book_cover1"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_top_right"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
