--- a/app/src/main/res/layout/item_editor_pick_place.xml
+++ b/app/src/main/res/layout/item_editor_pick_place.xml
@@ -15,6 +15,9 @@
         android:layout_height="90dp"
         android:scaleType="centerCrop"
         android:src="@drawable/img_book_cover1"
+        android:background="@drawable/rounded_top_right"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
         android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
