--- a/app/src/main/res/layout/item_popular_book.xml
+++ b/app/src/main/res/layout/item_popular_book.xml
@@ -12,6 +12,10 @@
         android:layout_height="130dp"
         android:src="@drawable/img_book_cover1"
         android:layout_marginEnd="12dp"
+        android:background="@drawable/rounded_top_right"
+        android:scaleType="centerCrop"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
