--- a/app/src/main/res/layout/item_bookclub_book_participation.xml
+++ b/app/src/main/res/layout/item_bookclub_book_participation.xml
@@ -61,7 +61,6 @@
         android:textColor="@color/colorLabelNormal"
         android:elevation="4dp"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="8dp"
         android:maxWidth="200dp"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
@@ -69,6 +68,7 @@
         android:scrollHorizontally="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="@+id/book_iv"
         app:layout_constraintBottom_toTopOf="@+id/author_tv"
         app:layout_constraintStart_toEndOf="@+id/book_iv"
@@ -81,7 +81,6 @@
         android:background="@color/transparent"
         android:text="정혜연 장편소설"
         android:textSize="16sp"
-        android:layout_marginTop="5dp"
         android:textColor="@color/colorLabelNormal"
         android:elevation="4dp"
         android:maxWidth="200dp"
@@ -91,8 +90,10 @@
         android:scrollHorizontally="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:layout_marginBottom="15dp"
         app:layout_constraintTop_toBottomOf="@+id/title_tv"
         app:layout_constraintStart_toStartOf="@+id/title_tv"
+        app:layout_constraintBottom_toBottomOf="@+id/book_iv"
         />
 
     <androidx.cardview.widget.CardView
@@ -102,7 +103,7 @@
         app:cardCornerRadius="10dp"
         android:layout_marginBottom="11dp"
         android:layout_marginHorizontal="13dp"
-        app:cardBackgroundColor="#80000000"
+        app:cardBackgroundColor="#A1000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -113,10 +114,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오늘도 책을 펼쳐 볼까요?"
-        android:textSize="18sp"
+        android:textSize="23sp"
         android:textColor="@color/colorLabelNormal"
         android:background="@color/transparent"
-        android:layout_marginStart="10dp"
+        android:fontFamily="@font/pretendard_semibold"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="@+id/black_bg"
         app:layout_constraintStart_toStartOf="@+id/black_bg"
@@ -129,10 +131,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="나의 완독률"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textColor="@color/white"
         android:background="@color/transparent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="17dp"
         app:layout_constraintTop_toBottomOf="@+id/item_participation_over_down_tv1"
         app:layout_constraintStart_toStartOf="@+id/item_participation_over_down_tv1"
         android:elevation="4dp"
@@ -145,6 +147,7 @@
         android:layout_height="9dp"
         android:max="100"
         android:elevation="5dp"
+        android:progressBackgroundTint="@color/white"
         android:progressDrawable="@drawable/progress_bar_primary"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
@@ -160,6 +163,7 @@
         android:textSize="14sp"
         android:textColor="@color/colorPrimaryNormal"
         android:background="@color/transparent"
+        android:fontFamily="@font/pretendard_bold"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toTopOf="@+id/item_participant_progress_bar"
         app:layout_constraintBottom_toBottomOf="@+id/item_participant_progress_bar"
