--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
 
     <style name="tab_layout_text">
         <item name="android:textSize">18sp</item>
-        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
     </style>
 
     <style name="CustomRadioButton" parent="Theme.AppCompat.Light">
