--- a/app/src/main/res/drawable/edit_text_radius_8.xml
+++ b/app/src/main/res/drawable/edit_text_radius_8.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#1B1C1E"/>
+    <solid android:color="#1670737C"/>
     <corners android:radius="8dp"/>
 </shape>
