--- a/app/src/main/res/layout/activity_bookclub_certification.xml
+++ b/app/src/main/res/layout/activity_bookclub_certification.xml
@@ -13,7 +13,7 @@
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
         android:scaleType="center"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="서평 인증하기"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:textSize="18sp"
         android:textColor="@color/colorLabelNormal"
         app:layout_constraintTop_toTopOf="@+id/back_btn"
