--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -50,6 +50,7 @@
         android:background="@drawable/edit_text_radius_8"
         android:hint="새 비밀번호"
         android:inputType="textPassword"
+        android:maxLines="1"
         android:textColorHint="@color/colorLabelAssistive"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -133,6 +134,7 @@
         android:layout_height="48dp"
         android:background="@drawable/edit_text_radius_8"
         android:hint="새 비밀번호 확인"
+        android:maxLines="1"
         android:inputType="textPassword"
         android:textColorHint="@color/colorLabelAssistive"
         android:textColor="@color/white"
@@ -181,13 +183,13 @@
         android:layout_height="wrap_content"
         android:text="비밀번호 변경하기"
         android:textSize="16sp"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="59dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="16dp"
         android:enabled="false"/>
 
