--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -93,6 +93,7 @@
             android:layout_height="48dp"
             android:background="@drawable/edit_text_radius_8"
             android:hint="닉네임 입력"
+            android:maxLines="1"
             android:textColorHint="@color/colorLabelAssistive"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -131,7 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="사용 불가능한 닉네임입니다."
-        android:textColor="@color/red"
+        android:textColor="#FF6363"
         android:layout_marginTop="8dp"
         android:layout_marginStart="5dp"
         android:visibility="gone"
@@ -144,13 +145,13 @@
         android:layout_height="wrap_content"
         android:text="변경하기"
         android:textSize="16sp"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="59dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="16dp"
         android:enabled="false"/>
 
