--- a/app/src/main/res/layout/activity_mypage_scrap_detail.xml
+++ b/app/src/main/res/layout/activity_mypage_scrap_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
         android:scaleType="center"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
             android:layout_weight="1"
             android:text="이동하기"
             android:textSize="16sp"
-            android:fontFamily="@font/pretendard_bold"
+            android:fontFamily="@font/pretendard_semibold"
             android:background="@drawable/primary_btn_bg"
             android:textColor="@color/button_text_color"
             android:layout_marginBottom="10dp"
@@ -135,7 +135,7 @@
             android:background="@drawable/primary_btn_bg"
             android:textColor="@color/button_text_color"
             android:textSize="16sp"
-            android:fontFamily="@font/pretendard_bold"
+            android:fontFamily="@font/pretendard_semibold"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="17dp"
