--- a/app/src/main/res/layout/activity_scrap_new_folder.xml
+++ b/app/src/main/res/layout/activity_scrap_new_folder.xml
@@ -12,7 +12,7 @@
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
         android:scaleType="center"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +38,7 @@
         android:layout_marginTop="45dp"
         android:backgroundTint="@color/colorPrimaryNormal"
         android:hint="새 폴더명 입력"
+        android:maxLines="1"
         android:textColorHint="@color/colorLabelAlternative"
         android:fontFamily="@font/pretendard_medium"
         android:textSize="16sp"
