--- a/app/src/main/res/layout/fragment_bookclub_book_home.xml
+++ b/app/src/main/res/layout/fragment_bookclub_book_home.xml
@@ -16,8 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:text="북클럽 멤버"
-            android:textSize="20sp"
-            android:fontFamily="@font/pretendard_bold"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/colorLabelNormal"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
@@ -41,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1월 북클럽"
-            android:textSize="20sp"
-            android:fontFamily="@font/pretendard_bold"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/colorLabelNormal"
             android:layout_marginTop="41dp"
             app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_members_rv"
