--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="마이페이지"
         android:textSize="22sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/colorLabelNormal"
         android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
@@ -76,7 +76,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorLabelNormal"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintTop_toTopOf="@+id/mypage_character_iv"
         app:layout_constraintBottom_toTopOf="@+id/mypage_description_tv"
         app:layout_constraintStart_toEndOf="@+id/mypage_character_iv" />
@@ -108,11 +108,20 @@
         app:layout_constraintTop_toBottomOf="@id/mypage_character_iv"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#29989BA2"
+        app:layout_constraintTop_toBottomOf="@id/mypage_content_tl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/mypage_content_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintVertical_bias="1.0"
+        android:layout_marginTop="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
