--- a/app/src/main/res/layout/fragment_mypage_review_calendar.xml
+++ b/app/src/main/res/layout/fragment_mypage_review_calendar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="30dp"
+    android:paddingTop="20dp"
     android:background="@color/colorMainBg"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_container">
@@ -21,7 +21,7 @@
             android:backgroundTint="#29989BA2"
             android:text="서평 모아보기"
             android:textColor="@color/colorLabelNeutral"
-            android:textSize="13sp"
+            android:textSize="12sp"
             android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,6 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="7dp"
                     android:textColor="@color/colorLabelNormal"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="17sp"
                     tools:text="2025.01" />
 
@@ -145,8 +146,8 @@
 
     <ImageView
         android:id="@+id/mypage_write_review_floating_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_pencil_black"
