--- a/app/src/main/res/layout/fragment_mypage_scrap_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_mypage_scrap_detail_bottom_sheet.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="14dp"
             android:textColor="@color/white"
-            android:textStyle="bold"
+            android:fontFamily="@font/pretendard_semibold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,8 +73,10 @@
             android:layout_height="46dp"
             android:layout_weight="1"
             android:text="취소하기"
-            android:background="@drawable/primary_btn_bg"
+            android:background="@drawable/cancel_btn_bg"
             android:textColor="@color/button_text_color"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_semibold"
             android:layout_marginStart="17dp"
             android:layout_marginEnd="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -88,8 +90,10 @@
             android:layout_height="46dp"
             android:layout_weight="1"
             android:text="이동하기"
+            android:textSize="16sp"
             android:background="@drawable/primary_btn_bg"
             android:textColor="@color/button_text_color"
+            android:fontFamily="@font/pretendard_semibold"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
