--- a/app/src/main/res/layout/item_mypage_scrap_detail.xml
+++ b/app/src/main/res/layout/item_mypage_scrap_detail.xml
@@ -35,8 +35,9 @@
         android:src="@drawable/ic_check"
         android:background="@drawable/white_rec_border_radius_5"
         android:elevation="2dp"
-        android:scaleType="center"
-        android:visibility="gone"
+        android:scaleType="fitCenter"
+        android:visibility="visible"
+        android:padding="20dp"
         app:layout_constraintTop_toTopOf="@+id/book_cardview"
         app:layout_constraintStart_toStartOf="@+id/book_cardview"/>
 
