--- a/app/src/main/res/layout/item_popular_book.xml
+++ b/app/src/main/res/layout/item_popular_book.xml
@@ -13,34 +13,13 @@
         android:layout_height="130dp"
         android:src="@drawable/img_book_cover7"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/rounded_top_right"
         android:scaleType="centerCrop"
+        android:background="@drawable/rounded_top_right"
         android:clipToOutline="true"
-        android:outlineProvider="bounds"
+        android:outlineProvider="background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-
-    <!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/item_book_img_cv"-->
-<!--        android:layout_width="90dp"-->
-<!--        android:layout_height="130dp"-->
-<!--        android:layout_marginEnd="12dp"-->
-<!--        app:cardCornerRadius="8dp"-->
-<!--        app:cardElevation="0dp"-->
-<!--        app:cardBackgroundColor="@android:color/white"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/item_popular_book_iv"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/img_book_cover7"-->
-<!--            android:scaleType="centerCrop"/>-->
-<!--    </androidx.cardview.widget.CardView>-->
 
     <ImageView
         android:id="@+id/item_bookmark_iv"
