--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -5,6 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M19.386,6.863C19.737,7.215 19.737,7.785 19.386,8.136L10.386,17.136C10.035,17.487 9.465,17.487 9.113,17.136L4.613,12.636C4.262,12.285 4.262,11.715 4.613,11.363C4.965,11.012 5.535,11.012 5.886,11.363L9.75,15.227L18.113,6.863C18.465,6.512 19.035,6.512 19.386,6.863Z"
-      android:fillColor="#FFFFFF"
-      android:fillAlpha="0.61"/>
+      android:fillColor="#FFFFFF"/>
 </vector>
