--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,16 +91,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/gradient_bg">
+            android:background="@color/colorMainBg">
 
             <TextView
                 android:id="@+id/greeting_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="30dp"
                 android:text="안녕하세요, 유저님!\n오늘은 어떤 책을 시작해볼까요?"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="23sp"
+                android:lineHeight="30dp"
+                android:fontFamily="@font/pretendard_semibold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,17 +111,18 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="20dp"
                 android:text="나의 활동"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/pretendard_semibold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/greeting_text" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginStart="20dp"
                 android:text="이번 달도 Ttt.와 즐거운 독서 라이프 즐겨봐요!"
                 android:textColor="#C2C4C8E0"
                 android:textSize="16sp"
@@ -157,14 +161,56 @@
 
 
 
-        <!-- 마지막 카드뷰 -->
-        <include
-            layout="@layout/reminder_section"
-            android:id="@+id/final_card"
-            android:layout_width="wrap_content"
+<!--        &lt;!&ndash; 마지막 카드뷰 &ndash;&gt;-->
+<!--        <include-->
+<!--            layout="@layout/reminder_section"-->
+<!--            android:id="@+id/final_card"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginHorizontal="16dp"/>-->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"/>
+            android:background="@color/colorMainBg"
+            android:padding="20dp">
+
+            <!-- 제목 -->
+            <TextView
+                android:id="@+id/reminder_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="리마인드 2024"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:fontFamily="@font/pretendard_semibold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!-- 부제목 -->
+            <TextView
+                android:id="@+id/reminder_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Ttt.에서의 추억을 떠올려봐요!"
+                android:textColor="#B3B3B3"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/reminder_title" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/reminder_review_rv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/reminder_subtitle" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
