--- a/app/src/main/res/layout/item_bookclub_book_participation.xml
+++ b/app/src/main/res/layout/item_bookclub_book_participation.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/book_iv"
         android:layout_width="55dp"
         android:layout_height="82dp"
@@ -49,6 +49,7 @@
         android:layout_marginTop="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/TopRoundedCorners"
         />
 
     <TextView
