FEAT: 일반 로그인 오류 해결

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="200dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="아이디(이메일)"
         android:textColor="@color/white"
@@ -62,6 +63,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="비밀번호"
         android:textColor="@color/white"
@@ -76,19 +78,20 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/background_login_input"
         android:backgroundTint="@color/white_10"
         android:hint="비밀번호(영문+숫자6+16자)"
         android:inputType="textEmailAddress"
+        android:paddingStart="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white_20"
         android:textSize="16sp"
-        app:layout_constraintHorizontal_bias="0.8"
-        android:paddingStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pw_label"/>
+        app:layout_constraintTop_toBottomOf="@+id/pw_label" />
     <ImageView
         android:id="@+id/pw_show"
         android:layout_width="wrap_content"
@@ -105,7 +108,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/btn_checkbox_background"
         android:button="@null"
         app:layout_constraintEnd_toStartOf="@+id/autologin"
@@ -131,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="19dp"
         android:text="이메일 찾기"
@@ -147,7 +150,7 @@
         android:id="@+id/and"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="14dp"
         android:layout_marginBottom="21dp"
         android:text="|"
         android:textColor="@color/white_50"
@@ -158,10 +161,10 @@
 
     <TextView
         android:id="@+id/find_pw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="81dp"
+        android:layout_height="23dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="19dp"
         android:text="비밀번호 찾기"
@@ -182,7 +185,8 @@
         app:layout_constraintBottom_toTopOf="@+id/first_login_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/login_button_description"/>
+        android:contentDescription="@string/login_button_description"
+        />
 
     <TextView
         android:id="@+id/first_login_label"
