--- a/app/src/main/res/layout/activity_scrap_new_folder.xml
+++ b/app/src/main/res/layout/activity_scrap_new_folder.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="45dp"
         android:backgroundTint="@color/colorPrimaryNormal"
         android:hint="새 폴더명 입력"
+        android:paddingBottom="15dp"
         android:maxLines="1"
         android:textColorHint="@color/colorLabelAlternative"
         android:fontFamily="@font/pretendard_medium"
@@ -64,6 +65,7 @@
         android:text="새 폴더 만들기"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
+        android:fontFamily="@font/pretendard_semibold"
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
