--- a/app/src/main/res/layout/activity_bookclub_certification.xml
+++ b/app/src/main/res/layout/activity_bookclub_certification.xml
@@ -1,186 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/colorMainBg">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/back_btn"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:src="@drawable/ic_prev_arrow"
-        android:scaleType="center"
-        android:layout_marginTop="26dp"
-        android:layout_marginStart="20dp"
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_layout">
 
-    <TextView
-        android:id="@+id/write_review_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="서평 인증하기"
-        android:fontFamily="@font/pretendard_semibold"
-        android:textSize="18sp"
-        android:textColor="@color/colorLabelNormal"
-        app:layout_constraintTop_toTopOf="@+id/back_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorMainBg">
 
-    <ImageView
-        android:id="@+id/photo_iv1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="31dp"
-        android:src="@drawable/img_write_review_camera"
-        app:layout_constraintTop_toBottomOf="@+id/back_btn"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <ImageView
+                android:id="@+id/back_btn"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_prev_arrow"
+                android:scaleType="center"
+                android:layout_marginTop="26dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/photo_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/photo_iv1"
-        app:layout_constraintBottom_toBottomOf="@+id/photo_iv1"
-        app:layout_constraintStart_toEndOf="@+id/photo_iv1"
-        android:orientation="horizontal"/>
+            <TextView
+                android:id="@+id/write_review_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="서평 인증하기"
+                android:fontFamily="@font/pretendard_semibold"
+                android:textSize="18sp"
+                android:textColor="@color/colorLabelNormal"
+                app:layout_constraintTop_toTopOf="@+id/back_btn"
+                app:layout_constraintBottom_toBottomOf="@+id/back_btn"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/title_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="제목"
-        android:fontFamily="@font/pretendard_bold"
-        android:textSize="12sp"
-        android:textColor="@color/colorLabelNeutral"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/photo_iv1"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <ImageView
+                android:id="@+id/photo_iv1"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="31dp"
+                android:src="@drawable/img_write_review_camera"
+                app:layout_constraintTop_toBottomOf="@+id/back_btn"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/title_edit_text"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/photo_rv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/photo_iv1"
+                app:layout_constraintBottom_toBottomOf="@+id/photo_iv1"
+                app:layout_constraintStart_toEndOf="@+id/photo_iv1"
+                android:orientation="horizontal" />
+
+            <TextView
+                android:id="@+id/title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="제목"
+                android:fontFamily="@font/pretendard_bold"
+                android:textSize="12sp"
+                android:textColor="@color/colorLabelNeutral"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@+id/photo_iv1"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <EditText
+                android:id="@+id/title_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:hint="서평의 제목을 입력해주세요"
+                android:textColorHint="@color/colorLabelAlternative"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:fontFamily="@font/pretendard_regular"
+                android:background="@drawable/edit_text_radius_8"
+                android:paddingVertical="13dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/title_tv"
+                app:layout_constraintStart_toStartOf="@+id/title_tv"
+                android:layout_marginHorizontal="20dp" />
+
+            <TextView
+                android:id="@+id/review_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="서평"
+                android:fontFamily="@font/pretendard_bold"
+                android:textSize="12sp"
+                android:textColor="@color/colorLabelNeutral"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/review_count_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0/300"
+                android:fontFamily="@font/pretendard_regular"
+                android:textSize="12sp"
+                android:textColor="@color/colorLabelNeutral"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toTopOf="@+id/review_tv"
+                app:layout_constraintBottom_toBottomOf="@+id/review_tv"
+                app:layout_constraintEnd_toEndOf="@+id/review_edit_text" />
+
+            <EditText
+                android:id="@+id/review_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="102dp"
+                android:hint="자유롭게 서평을 기록해보세요"
+                android:textColorHint="@color/colorLabelAlternative"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:fontFamily="@font/pretendard_regular"
+                android:background="@drawable/edit_text_radius_8"
+                android:paddingVertical="13dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/review_tv"
+                app:layout_constraintStart_toStartOf="@+id/review_tv"
+                android:layout_marginHorizontal="20dp"
+                android:gravity="top" />
+
+            <TextView
+                android:id="@+id/page_count_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="읽은 페이지"
+                android:fontFamily="@font/pretendard_bold"
+                android:textSize="12sp"
+                android:textColor="@color/colorLabelNeutral"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@+id/review_edit_text"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <EditText
+                android:id="@+id/page_count_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:hint="0 / 300"
+                android:textColorHint="@color/colorLabelAlternative"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:fontFamily="@font/pretendard_regular"
+                android:background="@drawable/edit_text_radius_8"
+                android:paddingVertical="13dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/page_count_tv"
+                app:layout_constraintStart_toStartOf="@+id/page_count_tv"
+                android:layout_marginHorizontal="20dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:hint="서평의 제목을 입력해주세요"
-        android:textColorHint="@color/colorLabelAlternative"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:fontFamily="@font/pretendard_regular"
-        android:background="@drawable/edit_text_radius_8"
-        android:paddingVertical="13dp"
-        android:paddingHorizontal="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/title_tv"
-        app:layout_constraintStart_toStartOf="@+id/title_tv"
-        android:layout_marginHorizontal="20dp"
-        />
-
-    <TextView
-        android:id="@+id/review_tv"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="서평"
-        android:fontFamily="@font/pretendard_bold"
-        android:textSize="12sp"
-        android:textColor="@color/colorLabelNeutral"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/review_count_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0/300"
-        android:fontFamily="@font/pretendard_regular"
-        android:textSize="12sp"
-        android:textColor="@color/colorLabelNeutral"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="@+id/review_tv"
-        app:layout_constraintBottom_toBottomOf="@+id/review_tv"
-        app:layout_constraintEnd_toEndOf="@+id/review_edit_text"/>
-
-    <EditText
-        android:id="@+id/review_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="102dp"
-        android:hint="자유롭게 서평을 기록해보세요"
-        android:textColorHint="@color/colorLabelAlternative"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:fontFamily="@font/pretendard_regular"
-        android:background="@drawable/edit_text_radius_8"
-        android:paddingVertical="13dp"
-        android:paddingHorizontal="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/review_tv"
-        app:layout_constraintStart_toStartOf="@+id/review_tv"
-        android:layout_marginHorizontal="20dp"
-        android:gravity="top"
-        />
-
-    <TextView
-        android:id="@+id/page_count_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="읽은 페이지"
-        android:fontFamily="@font/pretendard_bold"
-        android:textSize="12sp"
-        android:textColor="@color/colorLabelNeutral"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/review_edit_text"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <EditText
-        android:id="@+id/page_count_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:hint="0 / 300"
-        android:textColorHint="@color/colorLabelAlternative"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:fontFamily="@font/pretendard_regular"
-        android:background="@drawable/edit_text_radius_8"
-        android:paddingVertical="13dp"
-        android:paddingHorizontal="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/page_count_tv"
-        app:layout_constraintStart_toStartOf="@+id/page_count_tv"
-        android:layout_marginHorizontal="20dp"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:orientation="vertical"
         android:background="@color/colorMainBg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/done_btn"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:text="완료"
-        android:textSize="16sp"
-        android:fontFamily="@font/pretendard_bold"
-        android:background="@drawable/primary_btn_bg"
-        android:textColor="@color/button_text_color"
-        android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:enabled="false"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/done_btn"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:text="완료"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_bold"
+            android:background="@drawable/primary_btn_bg"
+            android:textColor="@color/button_text_color"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="10dp"
+            android:enabled="false" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
