--- a/app/src/main/res/layout/item_certify_photo.xml
+++ b/app/src/main/res/layout/item_certify_photo.xml
@@ -22,4 +22,15 @@
 
     </androidx.cardview.widget.CardView>
 
+    <ImageView
+        android:id="@+id/delete_photo_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="center"
+        android:layout_margin="4dp"
+        android:elevation="4dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
