fix: ui 피드백 3차 수정 업데이트

--- a/app/src/main/res/layout/item_mypage_scrap_detail.xml
+++ b/app/src/main/res/layout/item_mypage_scrap_detail.xml
@@ -51,7 +51,7 @@
         android:id="@+id/check_bg"
         android:layout_width="98dp"
         android:layout_height="152dp"
-        android:background="#66000000"
+        android:background="@drawable/check_border_bg"
         android:elevation="2dp"
         android:scaleType="fitCenter"
         android:visibility="visible"
@@ -65,7 +65,7 @@
         android:layout_height="152dp"
         android:src="@drawable/ic_check"
         android:elevation="10dp"
-        android:padding="40dp"
+        android:padding="45dp"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="@+id/check_bg"
         app:layout_constraintStart_toStartOf="@+id/check_bg"
