--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -4,53 +4,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
-    app:cardBackgroundColor="@color/white_20">
+    app:cardCornerRadius="5dp"
+    android:backgroundTint="#29989BA2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:paddingEnd="54dp">
 
-        <!-- 책 이미지 -->
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/book_image"
-            android:layout_width="80dp"
-            android:layout_height="120dp"
-            android:src="@drawable/book_sample1"
+            android:layout_width="56dp"
+            android:layout_height="88dp"
+            android:scaleType="centerCrop"
+            android:elevation="4dp"
+            android:background="@color/transparent"
             android:contentDescription="책 이미지"
+            android:src="@drawable/book_sample1"
+            android:layout_marginStart="21dp"
+            android:layout_marginVertical="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-
-            android:layout_marginStart="5dp"/>
+            app:shapeAppearanceOverlay="@style/TopRoundedCorners"
+            />
 
         <!-- 책 제목 -->
         <TextView
             android:id="@+id/book_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:text="서랍에 저녁을 넣어 두었다"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:textColor="#F7F7F8"
+            android:textSize="14sp"
+            android:fontFamily="@font/pretendard_bold"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintStart_toEndOf="@id/book_image"
-            app:layout_constraintTop_toTopOf="@id/book_image"
-            app:layout_goneMarginStart="15dp"/>
+            app:layout_constraintTop_toTopOf="@id/book_image"/>
 
        <ImageView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="14dp"
+           android:layout_height="14dp"
            android:id="@+id/next_btn"
            app:layout_constraintTop_toTopOf="@id/book_title"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/book_title"
            app:layout_constraintStart_toEndOf="@id/book_title"
-           android:layout_marginStart="10dp"
-          />
+           android:layout_marginStart="1dp"
+           app:tint="#9CAEB0B6" />
 
 
         <!-- 완독률 텍스트 -->
@@ -59,27 +61,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="완독률"
-            android:textSize="14sp"
-            android:textColor="#666666"
+            android:textSize="11sp"
+            android:textColor="#9CAEB0B6"
+            android:fontFamily="@font/pretendard_regular"
             app:layout_constraintStart_toStartOf="@id/book_title"
-            app:layout_constraintTop_toBottomOf="@id/book_title"
-            app:layout_constraintEnd_toEndOf="@id/book_title"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="10dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
+            android:layout_marginBottom="4dp"/>
 
         <!-- 진행률 ProgressBar -->
         <ProgressBar
             android:id="@+id/progress_bar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="10dp"
-            android:layout_marginTop="8dp"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="175dp"
+            android:layout_height="8dp"
             android:max="100"
-            android:progress="46"
-            app:layout_constraintEnd_toEndOf="@+id/completion_label"
-            app:layout_constraintStart_toStartOf="@+id/completion_label"
-            app:layout_constraintTop_toBottomOf="@id/completion_label"
-            android:progressTint="#CFF305" />
+            android:elevation="5dp"
+            android:progress="43"
+            android:progressBackgroundTint="@color/white"
+            android:progressDrawable="@drawable/progress_bar_primary"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/progress_percentage"
+            app:layout_constraintStart_toStartOf="@+id/completion_label"/>
 
         <!-- 진행률 퍼센트 -->
         <TextView
@@ -89,10 +91,11 @@
             android:layout_marginTop="8dp"
             android:text="46% 완료"
             android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
-            app:layout_constraintStart_toStartOf="@+id/progress_bar"
-            app:layout_constraintTop_toBottomOf="@id/progress_bar" />
+            android:textSize="11sp"
+            android:fontFamily="@font/pretendard_regular"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="@+id/book_image"
+            app:layout_constraintStart_toStartOf="@+id/progress_bar"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
