--- a/app/src/main/res/layout/activity_scrap_new_folder.xml
+++ b/app/src/main/res/layout/activity_scrap_new_folder.xml
@@ -63,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:text="새 폴더 만들기"
+        android:textSize="16sp"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
         android:fontFamily="@font/pretendard_semibold"
