--- a/app/src/main/res/layout/activity_sign_up_id.xml
+++ b/app/src/main/res/layout/activity_sign_up_id.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="30dp"
         android:layout_height="17dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
@@ -27,7 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/pretendard_bold"
         android:lineSpacingExtra="4dp"
@@ -64,6 +64,7 @@
         android:background="@drawable/background_login_input"
         android:backgroundTint="@color/white_10"
         android:hint="ttt@email.com"
+        android:paddingStart="12dp"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="@color/white_20"
@@ -128,6 +129,7 @@
         android:background="@drawable/background_login_input"
         android:backgroundTint="@color/white_10"
         android:hint="인증번호 입력"
+        android:paddingStart="12dp"
         android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white_20"
@@ -152,12 +154,12 @@
 
     <Button
         android:id="@+id/send_button"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
+        android:layout_width="85dp"
+        android:layout_height="46dp"
         android:backgroundTint="@color/primary_30"
         android:text="전송하기"
         android:textColor="@color/black"
-        android:textSize="11sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/pw_check_input"
         app:layout_constraintEnd_toEndOf="@+id/pw_check_input"
         app:layout_constraintHorizontal_bias="0.951"
@@ -170,7 +172,7 @@
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
         android:src="@drawable/btn_next"
         android:clickable="true"
