--- a/app/src/main/res/layout/activity_splash_ttt.xml
+++ b/app/src/main/res/layout/activity_splash_ttt.xml
@@ -17,4 +17,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_width="226dp"
+        android:layout_height="188dp"
+        android:src="@drawable/gradation_effect_background_oval"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
