--- a/app/src/main/res/layout/activity_sign_up_name.xml
+++ b/app/src/main/res/layout/activity_sign_up_name.xml
@@ -8,12 +8,25 @@
     tools:context=".signup.SignUpName"
     android:background="@color/black">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="30dp"
+        android:layout_height="17dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toTopOf="@+id/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.313"
+        app:srcCompat="@drawable/ic_signup_circle_frame2" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/pretendard_bold"
         android:lineSpacingExtra="4dp"
@@ -123,7 +136,7 @@
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
